@@ -287,7 +287,7 @@ BYTE parallel_cable_drive_read(int handshake)
         & parallel_cable_drive1_value;
 }
 
-void parallel_cable_cpu_write(BYTE data, int handshake)
+void parallel_cable_cpu_write(BYTE data)
 {
     if (!drive[0].enable && !drive[1].enable)
         return;
@@ -296,11 +296,22 @@ void parallel_cable_cpu_write(BYTE data, int handshake)
 	drive0_cpu_execute();
     if (drive[1].enable)
 	drive1_cpu_execute();
-    if (handshake) {
-	via1d0_signal(VIA_SIG_CB1, VIA_SIG_FALL);
-	via1d1_signal(VIA_SIG_CB1, VIA_SIG_FALL);
-    }
+
     parallel_cable_cpu_value = data;
+}
+
+void parallel_cable_cpu_pulse(void)
+{
+    if (!drive[0].enable && !drive[1].enable)
+        return;
+
+    if (drive[0].enable)
+	drive0_cpu_execute();
+    if (drive[1].enable)
+	drive1_cpu_execute();
+
+    via1d0_signal(VIA_SIG_CB1, VIA_SIG_FALL);
+    via1d1_signal(VIA_SIG_CB1, VIA_SIG_FALL);
 }
 
 BYTE parallel_cable_cpu_read(void)
@@ -312,8 +323,6 @@ BYTE parallel_cable_cpu_read(void)
     drive0_cpu_execute();
     if (drive[1].enable)
     drive1_cpu_execute();
-    via1d0_signal(VIA_SIG_CB1, VIA_SIG_FALL);
-    via1d1_signal(VIA_SIG_CB1, VIA_SIG_FALL);
     return parallel_cable_cpu_value & parallel_cable_drive0_value
         & parallel_cable_drive1_value;
 }
